# polyverse

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  LOG.md  MIGRATION_SUMMARY.md  Makefile  README.md  README.old.md  TASKS.md  docker-compose.dev.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
.openhands/: TASKS.md
aegisgov/: .env.example
aegisgov/config/: values.baseline.yaml
aegisgov/docs/: API.md
aegisgov/infra/: Dockerfile
aegisgov/ledger/: __init__.py
agents/moderation-agent/: Dockerfile  main.py
agents/onboarding-agent/: Dockerfile  README.md  main.py  requirements.txt
agents/summarizer-agent/: README.md  main.py
apps/polyverse/: .env.example
apps/web/: README.md  package-lock.json  package.json
cli/: Dockerfile.dev  pyproject.toml
contracts/: Dockerfile.dev
coordinator/: Dockerfile.dev
daemon/: Dockerfile.dev  README.md
docs/: AI_MESH.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MODERATION.md  PAYMENTS.md  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md
examples/llm-infer/: job.yaml
infra/: docker-compose.yml  seed.js
services/ai-router/: Dockerfile  README.md  main.py  requirements.txt
services/bridge-apub/: README.md
services/indexer/: .env.example  Dockerfile  README.md  drizzle.config.ts  index.js  jest.config.js  moderation.js  package-lock.json  (+2 more)
services/opengrid/daemon/: Cargo.toml  Dockerfile.dev
services/opengrid/daemon/src/: main.rs
truthfoundry/: .gitignore
verifier/: Dockerfile.dev  main.go
(+78 files in other folders)
